# bne

./: .gitignore  CONTRIBUTING.md  README.md  astro.config.mjs  docker-compose.yml  flake.nix  history.txt  package.json  pnpm-lock.yaml
.github/workflows/: clippy.yml  docker.yml
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  db  docker-compose.yaml  generate-certs.sh  history.txt  rust-toolchain.toml  rustfmt.toml  test.json
backend/backend-derive/: Cargo.toml
backend/backend-derive/src/: lib.rs
backend/db-derive/: Cargo.toml
backend/db-derive/src/: lib.rs
backend/email-templates/: email_change.html  email_changed.html  gdpr_compliance.html  password_changed.html  password_reset.html  verify.html
backend/src/: error.rs  governor.rs  main.rs  prelude.rs
backend/src/api/: change_email.rs  change_password.rs  change_untis_data.rs  change_untisdata.rs  check_session.rs  delete.rs  forgot_password.rs  gdpr_data_compliance.rs  get_free_rooms.rs  get_jahrgaenge.rs  get_lernbueros.rs  get_manual_lb_overwrites.rs  get_manual_lbs.rs  get_teachers.rs  get_timetable.rs  get_timetable_serviceworker.rs  login.rs  logout.rs  logout_all.rs  mod.rs  register.rs  resend_mail.rs  response.rs  save_jahrgaenge.rs  save_manual_lb_overwrites.rs  save_manual_lbs.rs  save_teachers.rs  utils.rs  verified.rs
backend/src/api/demo/: get_timetable.rs  mod.rs
backend/src/api/link/: check_uuid.rs  email.rs  email_change.rs  email_reset.rs  mod.rs  password.rs  verify.rs
backend/src/api_wrapper/: mod.rs  untis_client.rs  utils.rs
backend/src/database/: mod.rs  sessions.rs  surrealdb.rs  surrealdb_repo.rs
backend/src/mail/: error.rs  mailing.rs  mod.rs  utils.rs
backend/src/models/: jahrgang_model.rs  links_model.rs  manual_lb_model.rs  manual_lb_overwrite_model.rs  mod.rs  model.rs  room_model.rs  sessions_model.rs  teacher_model.rs  user_model.rs
backend/src/utils/: env.rs  macros.rs  mod.rs  password.rs  time.rs
docs/: documentation.md
frontend/: .env.development  .env.production  .gitignore  .prettierignore  .prettierrc.cjs  README.md  astro.config.mjs  compileServiceWorker.ts  package.json  pnpm-lock.yaml
frontend/public/: manifest.webmanifest
frontend/src/api/: Touch.ts  dateHandling.ts  encryption.ts  frontmatter.ts  main.ts  theBackend.ts  untisAPI.ts
frontend/src/components/: CookieBanner.tsx  HomeTitleBar.astro  Loading.tsx  LoginBox.astro  LoginForm.tsx  NotificationBanner.tsx  Plan.tsx  PlanContainer.tsx  RegisterForm.tsx  Sidebar.astro  Sidebar.tsx
frontend/src/layouts/: AdminLayout.astro  IndexLayout.astro  LoginLayout.astro  MissingPageLayout.astro  PlanLayout.astro  ResetPasswordLayout.astro  RootLayout.astro  StaticContentLayout.astro
frontend/src/logs/: testStudent.ts
frontend/src/pages/: 404.astro  admin.astro  datenschutz.md  faq.md  home.astro  impressum.md  index.astro  lizenz.md  login.astro  nutzungsbedingungen.md  passwort-vergessen.astro  registrieren.astro  sicherheit.md  stundenplan.astro
frontend/src/pwa/: NotificationWorker.ts  cachingStrategies.ts  serviceWorker.ts
frontend/src/styles/: Admin.scss  CookieBanner.scss  Kontakt.scss  Lernbueros.scss  Loading.scss  LoginForm.scss  Plan.css  Plan.scss  Popup.scss  Settings.scss  SettingsElement.scss  (+3 more)
logs/: jkannenberg.json
src/components/: HomeTitleBar.astro  LoginBox.astro  LoginButton.astro  ModalButton.astro  Plan.tsx  Sidebar.astro
src/layouts/: IndexLayout.astro  LoginLayout.astro  PlanLayout.astro
src/pages/: index.astro  stundenplan.astro
src/styles/: Plan.css
(+39 files in other folders)
