[package]
name = "the-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] } 
actix-web = { version = "4.2.1", features = ["rustls"] }
rustls = "0.20"
rustls-pemfile = "1"
actix-web-lab = "0.18.9"
actix-session-surrealdb = "0.1.3"
argon2 = "0.4.1"
async-stream = "0.3.3"
backend-derive = { version = "0.1.0", path = "backend-derive" }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest =  { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
surrealdb = "1.0.0-beta.9"
thiserror = "1.0.38"
actix-cors = "0.6.4"
chrono = "0.4.24"
anyhow = "1.0.71"
async-trait = "0.1.68"
lettre = { version = "0.10.4", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls-tls", "file-transport", "serde", "tracing"] }
tokio = { version = "1.28.2", features = ["fs"]}
uuid = { version = "1.3.3", features = ["v4"] }